    "logtalk" would not be returned by the implements_protocol/2-3 built-in
    predicates.

    Corrected a bug where multifile/1 directives would only accept a single
    predicate indicator as argument.

    Corrected a bug where compiling an explicit module-qualified module meta-
    argument would result in a compilation loop when the qualified goal is a
    variable.

    ECLiPSe 6.0#141 or a later version is now required when using this
    back-end Prolog compiler due to use of stream aliases in the Logtalk
    compiler.

    Updated the CxProlog config file to require version 0.97.5 or later. This
    version adds the epsilon/0 arithmetic constant that is used in the library
    unit test support.

    Updated the SWI-Prolog and YAP config files in order to support the
    expects_dialect/1 proprietary directive.

    Removed the definitions of the no longer necessary '$lgt_keysort'/2 and
    '$lgt_sort'/2 internal predicates from the supported config files.

    Updated the shell scripts used for generating the PDF versions of the
    Logtalk User and Reference Manuals for better performance and to fix an
    incompatibility with recent versions of the xsltproc XSLT processor.

    Updated the "library/lgtunit_loader.lgt" helper file to avoid entity
    redefinition warnings when loading the "library/all_loader.lgt" helper
    file from the "library" directory itself.

    Added an example, "adventure", with Logtalk adaptations of Prolog text
    adventures originally written by David Matuszek and Dan Cliburn.

    Added an experimental example of coinduction when using CxProlog, ECLiPSe,
    SICStus Prolog, SWI-Prolog, or YAP as the back-end Prolog compiler.

    Updated the "constraints/swipl/loader.lgt" helper file to avoid the errors
    generated when loading the CLP(FD) library with the SWI-Prolog "iso" flag
    set to "true".

    Updated the "dcgs" example unit tests to avoid a compilation error when