@@ -26,7 +26,6 @@ by default for running Logtalk with selected back-end Prolog compilers
 scripts!):
 
 * B-Prolog:       bplgt
-* Ciao:           ciaolgt    (first run must use sudo)
 * CxProlog:       cxlgt
 * ECLiPSe:        eclipselgt
 * GNU Prolog:     gplgt
