@@ -1,67 +1,0 @@
-.TH ciaolgt 1 "June 10, 2010" "Logtalk 2.41.0" "Logtalk Documentation"
-
-.SH NAME
-ciaolgt \-- Logtalk integration script for Ciao Prolog
-
-.SH SYNOPSIS
-.B ciaolgt
-[
-.BI \-e\ goal
-]
-
-.SH DESCRIPTION
-\f3ciaolgt\f1 is a Logtalk integration script for Ciao Prolog. It automatically loads the Ciao Prolog config file, the Logtalk compiler and runtime,  the Logtalk default table of library names and paths, and any existing settings file found on the startup directory or in the Logtalk user directory.
-
-.SH OPTIONS
-.TP
-.BI \-e\ goal
-Initialization goal, written between double quotes, to be executed after Logtalk startup.
-
-.SH REQUIREMENTS
-Ciao Prolog 1.10#8 is required.
-
-.SH ENVIRONMENT
-.TP
-.B LOGTALKHOME
-Specifies the location of the Logtalk installation.
-.TP
-.B LOGTALKUSER
-Specifies the location of the Logtalk user directory.
-
-.SH FILES
-.TP
-.BI $LOGTALKHOME/integration/logtalk_ciao.pl
-Prolog file used for loading the necessary files for starting Logtalk using Ciao Prolog as the back-end compiler.
-.TP
-.BI $LOGTALKHOME/configs/ciao.pl\ $LOGTALKHOME/configs/ciao_aux.pl
-The Ciao Prolog config files.
-.TP
-.BI $LOGTALKHOME/compiler/logtalk.pl
-The Logtalk compiler and runtime file.
-.TP
-.BI $LOGTALKUSER/libpaths/libpaths.pl
-The default table of library names and paths.
-.TP
-.BI ./settings.lgt
-Logtalk settings file (for overriding default settings in the config files). May not exist.
-.TP
-.BI $LOGTALKUSER/settings.lgt
-Logtalk settings file (for overriding default settings in the config files). May not exist.
-
-.SH CAVEATS
-The first run of this script must be made using sudo.
-
-.SH "SEE ALSO"
-The Logtalk website at http://logtalk.org/
-.PP
-The Logtalk User and Reference Manuals at $LOGTALKHOME/manuals/index.html
-.PP
-The Ciao Prolog website at http://www.clip.dia.fi.upm.es/Software/Ciao/index.html
-.PP
-logtalk_user_setup(1),\ logtalk_version_select(1),\ logtalk_backend_select(1)
-
-.SH AUTHOR
-Paulo Moura <pmoura@logtalk.org>
-
-.SH COPYRIGHT
-Copyright (c) 1998-2010 Paulo Moura.
