@@ -56,7 +56,6 @@ post-activate {
 	ui_msg "* the scripts!):"
 	ui_msg "*"
 	ui_msg "* B-Prolog (version 7.4 or later):       bplgt"
-	ui_msg "* Ciao (version 1.10):                   ciaolgt    (first run must use sudo)"
 	ui_msg "* CxProlog (version 0.97.5 or later):    cxlgt"
 	ui_msg "* ECLiPSe (version 6.0#141 or later):     eclipselgt"
 	ui_msg "* GNU Prolog (version 1.4.0 or later):   gplgt"
